--- a/api/package.json
+++ b/api/package.json
@@ -2,8 +2,9 @@
   "name": "api",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@redwoodjs/api": "7.1.2",
-    "@redwoodjs/graphql-server": "7.1.2"
+    "@redwoodjs/api": "7.1.3-next.37",
+    "@redwoodjs/graphql-server": "7.1.3-next.37"
   }
 }
