--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "browserslist": {
     "development": [
       "last 1 version"
@@ -11,15 +12,15 @@
     ]
   },
   "dependencies": {
-    "@redwoodjs/forms": "7.1.2",
-    "@redwoodjs/router": "7.1.2",
-    "@redwoodjs/web": "7.1.2",
+    "@redwoodjs/forms": "7.1.3-next.37",
+    "@redwoodjs/router": "7.1.3-next.37",
+    "@redwoodjs/web": "7.1.3-next.37",
     "humanize-string": "2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@redwoodjs/vite": "7.1.2",
+    "@redwoodjs/vite": "7.1.3-next.37",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19"
   }
